--- a/AssignmentFiles/Assignment2.vcxproj
+++ b/AssignmentFiles/Assignment2.vcxproj
@@ -190,10 +190,12 @@
     <ClInclude Include="FileView.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="myCircle.h" />
+    <ClInclude Include="myPattern.h" />
     <ClInclude Include="myPoint.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="myClasses.h" />
     <ClInclude Include="myRectangle.h" />
+    <ClInclude Include="myShape.h" />
     <ClInclude Include="myTriangle.h" />
     <ClInclude Include="OutputWnd.h" />
     <ClInclude Include="pch.h" />
@@ -223,7 +225,9 @@
     </ClCompile>
     <ClCompile Include="myCircle.cpp" />
     <ClCompile Include="myClasses.cpp" />
+    <ClCompile Include="myPattern.cpp" />
     <ClCompile Include="myRectangle.cpp" />
+    <ClCompile Include="myShape.cpp" />
     <ClCompile Include="myTriangle.cpp" />
     <ClCompile Include="OutputWnd.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
